fixed UI issues with postings page and navbar on mobile

--- a/client/src/components/posts/posts.css
+++ b/client/src/components/posts/posts.css
@@ -79,3 +79,213 @@ div.center-button {
   color: #007bff;
   font-size: 1.2em;
 }
+
+@media (min-width: 1200px) {
+  div.items-list {
+    width: 100%;
+  }
+
+  div.items-list .resize-detailed-list {
+    width: 100%;
+  }
+
+  div.items-list .resize-detailed-list card {
+    width: 100%;
+  }
+
+  div.items-list .resize-detailed-list card .card-body{
+    width: 100%;
+  }
+
+  .card .card-body .detailed-title {
+    width: 83%;
+  }
+
+  .card .card-body .detailed-text {
+    width: 83%;
+  }
+}
+
+@media (max-width: 1200px) {
+  div.items-list {
+    width: 100%;
+  }
+
+  div.items-list .resize-detailed-list {
+    width: 100%;
+  }
+
+  div.items-list .resize-detailed-list card {
+    width: 100%;
+  }
+
+  div.items-list .resize-detailed-list card .card-body{
+    width: 100%;
+  }
+
+  .card .card-body .detailed-title {
+    width: 80%;
+  }
+
+  .card .card-body .detailed-text {
+    width: 80%;
+  }
+}
+
+@media (max-width: 991px) {
+  div.items-list {
+    width: 100%;
+  }
+
+  div.items-list .resize-detailed-list {
+    width: 100%;
+  }
+
+  div.items-list .resize-detailed-list card {
+    width: 100%;
+  }
+
+  div.items-list .resize-detailed-list card .card-body{
+    width: 100%;
+  }
+
+  .card .card-body .detailed-title {
+    width: 72%;
+  }
+
+  .card .card-body .detailed-text {
+    width: 72%;
+  }
+}
+
+@media (max-width: 991px) {
+  div.items-list {
+    width: 100%;
+  }
+
+  div.items-list .resize-detailed-list {
+    width: 100%;
+  }
+
+  div.items-list .resize-detailed-list card {
+    width: 100%;
+  }
+
+  div.items-list .resize-detailed-list card .card-body{
+    width: 100%;
+  }
+
+  .card .card-body .detailed-title {
+    width: 60%;
+  }
+
+  .card .card-body .detailed-text {
+    width: 60%;
+  }
+
+  .detailed-text .card-text-list p {
+    height: 50px;
+    overflow-y: hidden;
+  }
+}
+
+@media (max-width: 767px) {
+  div.items-list {
+    width: 100%;
+  }
+
+  div.items-list .resize-detailed-list {
+    width: 100%;
+  }
+
+  div.items-list .resize-detailed-list card {
+    width: 100%;
+  }
+
+  div.items-list .resize-detailed-list card .card-body{
+    width: 100%;
+  }
+
+  .card .card-body .detailed-title {
+    width: 50%;
+  }
+
+  .card .card-body .detailed-text {
+    width: 50%;
+  }
+
+  .detailed-text .card-text-list p {
+    display: none;
+  }
+}
+
+@media (max-width: 500px) {
+  div.items-list {
+    width: 100%;
+  }
+
+  div.items-list .resize-detailed-list {
+    width: 100%;
+  }
+
+  div.items-list .resize-detailed-list card {
+    width: 100%;
+  }
+
+  div.items-list .resize-detailed-list card .card-body{
+    width: 100%;
+  }
+
+  .card .card-body .detailed-title {
+    width: 50%;
+  }
+
+  .card .card-body .detailed-text {
+    width: 50%;
+  }
+
+  .detailed-text .card-text-list p {
+    display: none;
+    height: 50px;
+    overflow-y: hidden;
+  }
+
+  div.card .card-body .img-detailed {
+    width: 7em !important;
+  }
+}
+
+@media (max-width: 433px) {
+  p#expand {
+    margin: auto;
+    position: absolute;
+    margin-top: 50px;
+    left: 0;
+    margin-left: 20px;
+    margin-right: 20px;
+    text-align: center;
+  }
+
+  div.format-options.tabs {
+    display: flex;
+    justify-content:  space-around;
+    width: 100vw;
+  }
+
+  div.format-options.tabs p {
+    position: relative;
+    margin: auto;
+  }
+
+  div.container {
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 60px;
+  }
+
+  div.container div.items {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+}
